--- a/index2.html
+++ b/index2.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Vendedor</title>
-    <style>@import url(styles.css);</style>
+    <title>Login Cliente</title>
+    <style>@import url(/styles.css);</style>
 </head>
 <body>
     <h1>Bem Vindo!</h1><br>
-    <h2>Vendedor</h2>
+    <h2>Cliente</h2>
     <h3>
         <label for="login">Informe seu login</label><br>
         <br><input type="text" name="login"><br>
         <br><label for="password">Informe sua senha</label><br>
         <br><input type="password" name="password" id=""><br>
         <br><input type="submit" value="Login"> &nbsp; 
-        <a href="./index2.html">
-            <input type="button" name value="Cliente">
-        </a>
+        <a href="./index.html">
+        <input type="button" name value="Vendedor"> </a> &nbsp;
+        <a href="./index3.html"> 
+        <input type="button" value="Cadastrar"></a> &nbsp;
+        <input type="button" value="Esqueci Minha Senha">
      </h3>
-     <h4>   
-        Caso tenha esquecido sua senha informe a administração
-     </h4>
 </body>
 </html>
