pagina inicial melhorada

--- a/pageinicial.html
+++ b/pageinicial.html
@@ -18,5 +18,13 @@
             <a href="./index.html" class="active">Login</a>
         </div>
     </div>
+    <h1>
+    <div class="footer" id="footer">
+        <footer class="copyright">
+                &#169; Copyright 2024. Todos os direitos reservados.
+        </footer>
+    </div>
+    </h1>
 </body>
+
 </html>
