--- a/index.html
+++ b/index.html
@@ -7,20 +7,25 @@
     <style>@import url(styles.css);</style>
 </head>
 <body>
-    <h1>Bem Vindo!</h1><br>
-    <h2>Vendedor</h2>
-    <h3>
-        <label for="login">Informe seu login</label><br>
-        <br><input type="text" name="login"><br>
-        <br><label for="password">Informe sua senha</label><br>
-        <br><input type="password" name="password" id=""><br>
-        <br><input type="submit" value="Login"> &nbsp; 
-        <a href="./index2.html">
-            <input type="button" name value="Cliente">
-        </a>
-     </h3>
-     <h4>   
-        Caso tenha esquecido sua senha informe a administração
-     </h4>
+    <section class="container">
+        <h1>Bem Vindo!</h1><br>
+    <div class="retangulo">
+        <h2>Vendedor</h2>
+        <h3>
+            <label for="login">Informe seu login</label><br>
+            <br><input type="text" name="login"><br>
+            <br><label for="password">Informe sua senha</label><br>
+            <br><input type="password" name="password" id=""><br>
+            <br><input type="submit" value="Login"> &nbsp; 
+            <a href="./index2.html">
+                <input type="button" name value="Cliente">
+            </a>
+        </h3>
+        <h4>   
+            Caso tenha esquecido sua senha <br> 
+            informe a administração
+        </h4>
+    </div>
+    </section>
 </body>
 </html>
