melhorias no desing

--- a/index2.html
+++ b/index2.html
@@ -7,19 +7,25 @@
     <style>@import url(/styles.css);</style>
 </head>
 <body>
-    <h1>Bem Vindo!</h1><br>
-    <h2>Cliente</h2>
-    <h3>
-        <label for="login">Informe seu login</label><br>
-        <br><input type="text" name="login"><br>
-        <br><label for="password">Informe sua senha</label><br>
-        <br><input type="password" name="password" id=""><br>
-        <br><input type="submit" value="Login"> &nbsp; 
-        <a href="./index.html">
-        <input type="button" name value="Vendedor"> </a> &nbsp;
-        <a href="./index3.html"> 
-        <input type="button" value="Cadastrar"></a> &nbsp;
-        <input type="button" value="Esqueci Minha Senha">
-     </h3>
+    <section class="container">
+        <h1>Bem Vindo!</h1><br>
+        <div class="retangulo">
+            <h2>Cliente</h2>
+            <h3>
+                <label for="login">Informe seu login</label><br>
+                <br><input type="text" name="login" class="caixa"><br>
+                <br><label for="password">Informe sua senha</label><br>
+                <br><input type="password" name="password" id="" class="caixa"><br>
+                <br><input type="submit" value="Login" class="botao1"> &nbsp; 
+                <a href="./index.html">
+                <input type="button" value="Vendedor" class="botao1"></a>
+                <a href="./index3.html">
+             </h3>
+             <h4>
+                <input type="button" value="Cadastrar" class="botao1"></a> &nbsp;
+                <input type="button" value="Esqueci Minha Senha" class="botao1">
+             </h4>
+        </div>
+    </section>
 </body>
 </html>
