--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <h2>Vendedor</h2>
         <h3>
             <label for="login">Informe seu login</label><br>
-            <br><input type="text" name="login"><br>
+            <br><input type="text" name="login" class="caixa"><br>
             <br><label for="password">Informe sua senha</label><br>
-            <br><input type="password" name="password" id=""><br>
-            <br><input type="submit" value="Login"> &nbsp; 
+            <br><input type="password" name="password" id="" class="caixa"><br>
+            <br><input type="submit" value="Login" class="botao1"> &nbsp; 
             <a href="./index2.html">
-                <input type="button" name value="Cliente">
+                <input type="button" name value="Cliente" class="botao1">
             </a>
         </h3>
         <h4>   
