--- a/index3.html
+++ b/index3.html
@@ -5,32 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Cliente</title>
     <style>@import url(./stylecadastro.css);</style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <h1>Cadastro do Cliente</h1><br>
-    <h2>
-        <fieldset>
-            <label for="name">Nome:</label>&nbsp;
-            <input type="text" name="name"><br>
-            <br><label for="sname">Sobrenome:</label>&nbsp;
-            <input type="text" id="sname" name="sname" value=""><br>
-            <br><label for="cpf">CPF:</label>&nbsp;
-            <input type="text" name="cpf" placeholder="xxx.xxx.xxx-xx"><br>
-            <br><label for="phone">Telefone para contato:</label>&nbsp;
-            <input type="tel" name="phone" id="" placeholder="(xx) +xx xxxxx-xxxx"><br>
-            <br><label for="mail">Email:</label>&nbsp;
-            <input type="email" name="mail" id=""><br>
-            <br><label for="password">Senha:</label>&nbsp;
-            <input type="password" name="password" id=""><br>
-            <br><label for="cpassword">Confirme a Senha:</label>&nbsp;
-            <input type="password" name="cpassword" id="">
-        </fieldset>
-    </h2>
-    <h3>
-        <a href="./index2.html">
-        <input type="submit" value="Cadastrar"></a>&nbsp;
-        <a href="./index2.html">
-        <input type="button" value="Voltar"></a>    
-    </h3>
+    <section class="container">
+        <h1 class="titulo">Cadastro do Cliente</h1><br>
+        <h2>
+            <fieldset class="textos">
+                <br>
+                <label for="name">Nome</label><br>
+                <input type="text" name="name" class="caixa"><br>
+                <br><label for="sname">Sobrenome:</label><br>
+                <input type="text" id="sname" name="sname" value="" class="caixa"><br>
+                <br><label for="cpf">CPF</label><br>
+                <input type="text" name="cpf" placeholder="xxx.xxx.xxx-xx" class="caixacpf"><br>
+                <br><label for="phone">Telefone para Contato</label><br>
+                <input type="tel" name="phone" id="" required placeholder="(xx) xxxxx-xxxx" class="caixafone"><br>
+                <br><label for="mail">Email</label><br>
+                <input type="email" name="mail" id="" class="caixamail"><br>
+                <br><label for="password">Senha</label><br>
+                <input type="password" name="password" id="" class="caixa">&nbsp;<i class="bi bi-eye-fill"></i><br>
+                <br><label for="cpassword">Confirme a Senha</label><br>
+                <input type="password" name="cpassword" id="" class="caixa">&nbsp;<i class="bi bi-eye-fill"></i><br>
+                <br>
+            </fieldset>
+        </h2>
+        <h3>
+            <a href="./index2.html">
+            <input type="submit" value="Cadastrar" class="botao1"></a>&nbsp;
+            <a href="./index2.html">
+            <input type="button" value="Voltar" class="botao1"></a>    
+        </h3>
+    </section>
 </body>
 </html>
