--- a/index3.html
+++ b/index3.html
@@ -19,15 +19,11 @@
                 <input type="text" id="sname" name="sname" value="" class="caixa"><br>
                 <br><label for="cpf">CPF</label><br>
                 <input type="text" name="cpf" placeholder="xxx.xxx.xxx-xx" class="caixacpf"><br>
-                <br><label for="phone">Telefone para Contato</label><br>
-                <input type="tel" name="phone" id="" required placeholder="(xx) xxxxx-xxxx" class="caixafone"><br>
-                <br><label for="mail">Email</label><br>
-                <input type="email" name="mail" id="" class="caixamail"><br>
-                <br><label for="password">Senha</label><br>
-                <input type="password" name="password" id="" class="caixa">&nbsp;<i class="bi bi-eye-fill"></i><br>
-                <br><label for="cpassword">Confirme a Senha</label><br>
-                <input type="password" name="cpassword" id="" class="caixa">&nbsp;<i class="bi bi-eye-fill"></i><br>
-                <br>
+                <br><form action="" class="cidades">
+                    <select name="região" id="cidade">
+                        <option value="">Escolha sua cidade</option>
+                    </select>
+                </form><br>
             </fieldset>
         </h2>
         <h3>
