--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Vendedor</title>
     <style>@import url(styles.css);</style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <section class="container">
@@ -15,7 +16,7 @@
             <label for="login">Informe seu login</label><br>
             <br><input type="text" name="login" class="caixa"><br>
             <br><label for="password">Informe sua senha</label><br>
-            <br><input type="password" name="password" id="" class="caixa"><br>
+            <br><input type="password" name="password" id="" class="caixa"><br><i class="bi bi-eye-fill"></i><br><br>
             <br><input type="submit" value="Login" class="botao1"> &nbsp; 
             <a href="./index2.html">
                 <input type="button" name value="Cliente" class="botao1">
