--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Cliente</title>
     <style>@import url(/styles.css);</style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
     <section class="container">
@@ -15,15 +16,18 @@
                 <label for="login">Informe seu login</label><br>
                 <br><input type="text" name="login" class="caixa"><br>
                 <br><label for="password">Informe sua senha</label><br>
-                <br><input type="password" name="password" id="" class="caixa"><br>
+                <br><input type="password" name="password" id="" class="caixa"><i class="bi bi-eye-fill"></i><br><br>
                 <br><input type="submit" value="Login" class="botao1"> &nbsp; 
                 <a href="./index.html">
                 <input type="button" value="Vendedor" class="botao1"></a>
                 <a href="./index3.html">
              </h3>
              <h4>
-                <input type="button" value="Cadastrar" class="botao1"></a> &nbsp;
-                <input type="button" value="Esqueci Minha Senha" class="botao1">
+                <input type="button" value="Cadastrar" class="botao1"></a><br>
+                <br><div class="aviso">
+                    Caso tenha esquecido sua senha <br> 
+                    solicite ao seu vendedor
+                </div>
              </h4>
         </div>
     </section>
