ultimo update da noite

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
     <section class="container">
-        <h1>Bem Vindo!</h1><br>
+        <h1 class="titulo">Bem Vindo!</h1><br>
     <div class="retangulo">
         <h2>Vendedor</h2>
         <h3>
             <label for="login">Informe seu login</label><br>
             <br><input type="text" name="login" class="caixa"><br>
             <br><label for="password">Informe sua senha</label><br>
-            <br><input type="password" name="password" id="" class="caixa"><br><i class="bi bi-eye-fill"></i><br><br>
+            <br><input type="password" name="password" id="" class="caixa"><br><i class="bi bi-eye-fill"></i><br>
             <br><input type="submit" value="Login" class="botao1"> &nbsp; 
             <a href="./index2.html">
                 <input type="button" name value="Cliente" class="botao1">
             </a>
         </h3>
-        <h4>   
+        <h4 class="aviso">   
             Caso tenha esquecido sua senha <br> 
             informe a administração
         </h4>
