--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="container">
-        <h1>Bem Vindo!</h1><br>
+        <h1 class="titulo">Bem Vindo!</h1><br>
         <div class="retangulo">
             <h2>Cliente</h2>
             <h3>
