--- a/index3.html
+++ b/index3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="container">
-        <h1 class="titulo">Cadastro do Cliente</h1><br>
+        <h1 class="titulo"><u>Pré Cadastro</u></h1><br>
         <h2>
             <fieldset class="textos">
                 <br>
@@ -18,12 +18,10 @@
                 <br><label for="sname">Sobrenome:</label><br>
                 <input type="text" id="sname" name="sname" value="" class="caixa"><br>
                 <br><label for="cpf">CPF</label><br>
-                <input type="text" name="cpf" placeholder="xxx.xxx.xxx-xx" class="caixacpf"><br>
-                <br><form action="" class="cidades">
-                    <select name="região" id="cidade">
-                        <option value="">Escolha sua cidade</option>
-                    </select>
-                </form><br>
+                <input type="text" name="cpf" class="caixacpf" placeholder="xxx.xxx.xxx-xx"><br>
+                <br><label for="cidade">Cidade</label><br>
+                <input type="text" name="cidade" id="cidade" class="caixacidade"><br>
+                <br>
             </fieldset>
         </h2>
         <h3>
