--- a/pageinicial.html
+++ b/pageinicial.html
@@ -15,6 +15,7 @@
             <a href="" class="active">Home</a>&nbsp;&nbsp;
             <a href="" class="active">Sobre Nós</a>&nbsp;&nbsp;
             <a href="" class="active">Contatos</a>&nbsp;&nbsp;
+            <a href="" class="active">Produtos</a>&nbsp;&nbsp;
             <a href="./index.html" class="active">Login</a>
         </div>
     </div>
