--- a/index3.html
+++ b/index3.html
@@ -7,29 +7,30 @@
     <style>@import url(./stylecadastro.css);</style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
+<body class="bg-gradiente-verde">
+    <img src="./Imagens/logo-proquill.png" alt="" class="imagem-canto-superior-esquerdo">
     <section class="container">
         <h1 class="titulo"><u>Pré Cadastro</u></h1><br>
         <h2>
             <fieldset class="textos">
                 <br>
-                <label for="name">Nome</label><br>
+                <label for="name" style="font-size: 20px;">Nome</label><br>
                 <input type="text" name="name" class="caixa"><br>
-                <br><label for="sname">Sobrenome:</label><br>
+                <br><label for="sname" style="font-size: 20px;">Sobrenome:</label><br>
                 <input type="text" id="sname" name="sname" value="" class="caixa"><br>
-                <br><label for="cpf">CPF</label><br>
+                <br><label for="cpf" style="font-size: 20px;">CPF</label><br>
                 <input type="text" name="cpf" class="caixacpf" placeholder="xxx.xxx.xxx-xx"><br>
-                <br><label for="cidade">Cidade</label><br>
+                <br><label for="cidade" style="font-size: 20px;">Cidade</label><br>
                 <input type="text" name="cidade" id="cidade" class="caixacidade"><br>
                 <br>
             </fieldset>
         </h2>
-        <h3>
+        <h1>
             <a href="./index2.html">
-            <input type="submit" value="Cadastrar" class="botao1"></a>&nbsp;
-            <a href="./index2.html">
-            <input type="button" value="Voltar" class="botao1"></a>    
-        </h3>
+            <input type="submit" value="Cadastrar" class="botao1"></a>
+            <a href="./paginaCapa.html">
+            <input type="button" value="Voltar" class="botao1"></a>
+        </h1>
     </section>
 </body>
 </html>
