--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Vendedor</title>
     <style>@import url(styles.css);</style>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    
 </head>
-<body>
+<body class="bg-gradiente-verde">
+    <img src="./Imagens/logo-proquill.png" alt="" class="imagem-canto-superior-esquerdo">
+
     <section class="container">
         <h1 class="titulo">Bem Vindo!</h1><br>
-    <div class="retangulo">
-        <h2>Vendedor</h2>
-        <h3>
-            <label for="login">Informe seu login</label><br>
-            <br><input type="text" name="login" class="caixa"><br>
-            <br><label for="password">Informe sua senha</label><br>
-            <br><input type="password" name="password" id="" class="caixa"><br><i class="bi bi-eye-fill"></i><br>
-            <br><input type="submit" value="Login" class="botao1"> &nbsp; 
-            <a href="./index2.html">
-                <input type="button" name value="Cliente" class="botao1">
-            </a>
-        </h3>
-        <h4 class="aviso">   
-            Caso tenha esquecido sua senha <br> 
-            informe a administração
-        </h4>
-    </div>
+        <div class="retanguloSolido">
+            <h2>Vendedor</h2>
+            <h3>
+                <label for="login" style="position: relative; top: 20px;">Informe seu login</label><br>
+                <br><input type="text" name="login" class="caixa1"><br>
+                <br><label for="password" style="position: relative; top: 20px;">Informe sua senha</label><br>
+                <br><input type="password" name="password" id="" class="caixa2"><br><i class="bi bi-eye-fill"></i><br>
+                <br><input type="submit" value="Login" class="botao1"> &nbsp; 
+                <a href="./paginaCapa.html">
+                    <input type="button" name value="Voltar" class="botao1">           
+                </a>
+            </h3>
+            <h4 class="aviso">   
+                Caso tenha esquecido sua senha <br> 
+                informe a administração
+            </h4>
+        </div>
     </section>
 </body>
 </html>
