--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Cliente</title>
-    <style>@import url(/styles.css);</style>
+    <title>Cadastro de Cliente</title>
+    <link rel="stylesheet" href="./styleCliente.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
@@ -12,23 +12,23 @@
         <h1 class="titulo">Bem Vindo!</h1><br>
         <div class="retangulo">
             <h2>Cliente</h2>
-            <h3>
+            <form action="">
                 <label for="login">Informe seu login</label><br>
-                <br><input type="text" name="login" class="caixa"><br>
-                <br><label for="password">Informe sua senha</label><br>
-                <br><input type="password" name="password" id="" class="caixa"><i class="bi bi-eye-fill"></i><br><br>
-                <br><input type="submit" value="Login" class="botao1"> &nbsp; 
-                <a href="./index.html">
-                <input type="button" value="Vendedor" class="botao1"></a>
-                <a href="./index3.html">
-             </h3>
-             <h4>
-                <input type="button" value="Cadastrar" class="botao1"></a><br>
-                <br><div class="aviso">
-                    Caso tenha esquecido sua senha <br> 
-                    solicite ao seu vendedor
-                </div>
-             </h4>
+                <input type="text" name="login" class="caixa"><br>
+                <label for="password">Informe sua senha</label><br>
+                <input type="password" name="password" class="caixa">
+                <i class="bi bi-eye-fill"></i><br><br>
+                <input type="submit" value="Login" class="botao1">
+                <a href="./paginaCapa.html" class="botao1">Voltar</a>
+                
+            </form>
+            <div class="aviso">
+                Caso tenha esquecido sua senha, solicite ao seu vendedor.
+            </div>
+            <br>
+            <a href="https://api.whatsapp.com/send?phone=seu-numero-de-telefone" target="_blank" class="botao1 whatsapp">
+                <i class="bi bi-whatsapp"></i> Contate seu vendedor
+            </a>
         </div>
     </section>
 </body>
